website/versioned_docs/version-2.3.0/react-native.reactnativeoidccontainer.md
---
id: version-2.3.0-react-native.reactnativeoidccontainer
title: ReactNativeOIDCContainer class
hide_title: true
original_id: react-native.reactnativeoidccontainer
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## ReactNativeOIDCContainer class

Skygear OIDC APIs (for React Native).

<b>Signature:</b>

```typescript
export declare class ReactNativeOIDCContainer<T extends ReactNativeAPIClient> extends OIDCContainer<T> 
```

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(parent, auth)](./react-native.reactnativeoidccontainer._constructor_.md) |  | Constructs a new instance of the <code>ReactNativeOIDCContainer</code> class |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [clientID](./react-native.reactnativeoidccontainer.clientid.md) |  | <code>string</code> |  |
|  [isThirdParty](./react-native.reactnativeoidccontainer.isthirdparty.md) |  | <code>boolean</code> |  |

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [\_setupCodeVerifier()](./react-native.reactnativeoidccontainer._setupcodeverifier.md) |  |  |
|  [authorize(options)](./react-native.reactnativeoidccontainer.authorize.md) |  | Open authorize page |
|  [logout(options)](./react-native.reactnativeoidccontainer.logout.md) |  | Logout. |
|  [openURL(url)](./react-native.reactnativeoidccontainer.openurl.md) |  | Open the URL with the user agent that is used to perform authentication. |

